# ThermalDetectionC-Embedded

./: CMakeLists.txt  README.md  main.cpp  thermal.cpp  thermal.h
